--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -1,42 +1,142 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+:root {
+  --primary-color: #fb1b1b;
+  --second-color: #000000;
+  --third-color: #dfdfdf;
+  --fourth-color: #ffffff;
+  --small-size: 1.5rem;
+  --medium-size: 2.5rem;
+  --big-size:3rem
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: var(--fourth-color);
+}
+
+body {
+  font-family: "Monomaniac One", sans-serif;
+  font-size: 30px;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: sticky;
+  top: 0px;
+  padding: 0.5rem;
+  gap: 3rem;
+  background-color: var(--primary-color);
+  z-index: 3;
+}
+
+h1{
   text-align: center;
 }
 
+button {
+  background-color: var(--primary-color);
+  color: var(--fourth-color);
+  border: none;
+  margin: 1rem;
+  padding: 1rem;
+}
+
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  width: 70%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -70%);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.login-form {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 70%;
+}
+
+.welcome-message{
+  text-align: center;
+}
+
+.pokemon-image {
+  width: 40%;
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  z-index: 2;
+  max-height: 140px;
+}
+
+.pokemon-image:hover{
+  transform:scale(1.1)
+}
+
+.pokemon-card {
+  position: relative;
+  display:inline-block;
+  left: 1%;
+  width: 16rem;
+  height: 19rem;
+  border-radius: 20px;
+  margin: 0.75rem;
+  box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.3);
+  z-index: 2;
+}
+
+.pokemon-card:hover{
+  transform:scale(.98)
+}
+
+.pokeball{
+  width: 50%;
+  opacity: 50%;
+  position: absolute;
+  right: -10px;
+  bottom: -20px;
+  z-index: 1;
+}
+
+.pokemon-name {
+  font-size: var(--big-size);
+  color: var(--fourth-color);
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.15);
+  border-radius: 20px 20px 0 0;
+}
+
+.pokemon-stat {
+  font-size: var(--small-size);
+  padding: 0.6rem 1rem;
+  color: var(--third-color);
+}
+
+.button-content{
+  display: flex;
+  justify-content: center;
+}
+
+.pokemon-stat--type{
+  margin: 1rem 1.5rem;
+  text-transform: uppercase;
+  font-size: var(--small-size);
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  right: 0;
+}
+
+
+@media screen and (max-width: 390px) {
+  body {
+    font-size: 14px;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
